@@ -17,7 +17,7 @@
    +----------------------------------------------------------------------+
 */
 
-/* $Id: dom_properties.h,v 1.5 2004/01/08 17:32:03 sniper Exp $ */
+/* $Id: dom_properties.h,v 1.6 2004/08/13 12:32:55 chregu Exp $ */
 #ifndef DOM_PROPERTIES_H
 #define DOM_PROPERTIES_H
 
@@ -59,6 +59,8 @@ int dom_document_resolve_externals_read(dom_object *obj, zval **retval TSRMLS_DC
 int dom_document_resolve_externals_write(dom_object *obj, zval *newval TSRMLS_DC);
 int dom_document_preserve_whitespace_read(dom_object *obj, zval **retval TSRMLS_DC);
 int dom_document_preserve_whitespace_write(dom_object *obj, zval *newval TSRMLS_DC);
+int dom_document_recover_read(dom_object *obj, zval **retval TSRMLS_DC);
+int dom_document_recover_write(dom_object *obj, zval *newval TSRMLS_DC);
 int dom_document_substitue_entities_read(dom_object *obj, zval **retval TSRMLS_DC);
 int dom_document_substitue_entities_write(dom_object *obj, zval *newval TSRMLS_DC);
 
