@@ -17,7 +17,7 @@
   +----------------------------------------------------------------------+
 */
 
-/* $Id: xml_common.h,v 1.19 2004/01/08 17:32:03 sniper Exp $ */
+/* $Id: xml_common.h,v 1.20 2004/08/13 12:32:55 chregu Exp $ */
 
 #ifndef PHP_XML_COMMON_H
 #define PHP_XML_COMMON_H
@@ -31,6 +31,7 @@ typedef struct _dom_doc_props {
 	int preservewhitespace;
 	int substituteentities;
 	int stricterror;
+	int recover;
 } dom_doc_props;
 
 typedef dom_doc_props *dom_doc_propsptr;
